fixed some typos and formatting

--- a/Notebook1.ipynb
+++ b/Notebook1.ipynb
@@ -20,9 +20,9 @@
     "## What is a Differential Equation and Why are They Important in Physics?\n",
     "\n",
     "A differential equation is an equation that relates an unknown function to its derivatives (or possibly to just some constants).  The following are examples of differential equations:\n",
-    "$$y'' - 2y' = cos(y)$$\n",
-    "$$\\frac{d^2y}{dt^2} = -3y$$\n",
-    "$$\\frac{dy}{dx} = 7$$\n",
+    "$y'' - 2y' = cos(y)$\n",
+    "$\\frac{d^2y}{dt^2} = -3y$\n",
+    "$\\frac{dy}{dx} = 7$\n",
     "\n",
     "Solving a differential equations means finding an equation for the original function (y in the above examples) such that the differential equation is satisfied.  Solving differential equations is a large area of mathematics.  You can learn more about how to solve differential equations at the resources linked at the bottom of this notebook.  This notebook, however, will focus on ways to solve differential equations computationally (using _numerical methods_).\n"
    ]
@@ -61,26 +61,26 @@
     "### An Introduction to Discretization for Numerical Methods\n",
     "\n",
     "Let's assume that we know the equation for the velocity of an object as a function of time, v(t), and we want to find the position of that object with respect to time.  Analytically, we know that the velocity of an object is just the derivative of the position with respect to time:\n",
-    "$$v(t) = \\frac{dy(t)}{dt},$$ which means that we can find the position function analytically by simply integrating the velocity equation: $$y(t) = \\int_{t_{initial}}^{t_{final}} v(t)dt.$$\n",
+    "$v(t) = \\frac{dy(t)}{dt},$ which means that we can find the position function analytically by simply integrating the velocity equation: $y(t) = \\int_{t_{initial}}^{t_{final}} v(t)dt.$\n",
     "\n",
-    "However, when solving for the position function analytically, we have to take a different approach to discretize all of the variables.  Assuming we are only taking a very small time step, we can rewrite the derivative for velocity in an approximate form: $$v(t) = \\frac{dy(t)}{dt} \\approx \\frac{\\Delta y}{\\Delta t}.$$\n",
+    "However, when solving for the position function analytically, we have to take a different approach to discretize all of the variables.  Assuming we are only taking a very small time step, we can rewrite the derivative for velocity in an approximate form: $v(t) = \\frac{dy(t)}{dt} \\approx \\frac{\\Delta y}{\\Delta t}.$\n",
     "\n",
-    "Here we have used the variable $\\Delta t$, which is known as the time step.  We can define the time step as: $$\\Delta t = \\frac{t_{final}-t_{initial}}{n},$$ where n is the number of points we wish to solve for position at.\n",
+    "Here we have used the variable $\\Delta t$, which is known as the time step.  We can define the time step as: $\\Delta t = \\frac{t_{final}-t_{initial}}{n},$ where n is the number of points we wish to solve for position at.\n",
     "\n",
-    "We can expand our approximate equation for velocity as: $$v(t) \\approx \\frac{\\Delta y}{\\Delta t} = \\frac{y(t+\\Delta t) - y(t)}{\\Delta t}.$$\n",
+    "We can expand our approximate equation for velocity as: $v(t) \\approx \\frac{\\Delta y}{\\Delta t} = \\frac{y(t+\\Delta t) - y(t)}{\\Delta t}.$\n",
     "\n",
-    "Now we can solve the above equation to get an equation for the position (removing the approximation, especially for $\\Delta t$ $\\approx$ 0): $$y(t+\\Delta t) = y(t) + v(t)\\Delta t.$$\n",
+    "Now we can solve the above equation to get an equation for the position (removing the approximation, especially for $\\Delta t$ $\\approx$ 0): $y(t+\\Delta t) = y(t) + v(t)\\Delta t.$\n",
     "\n",
-    "From here we need to introduce a notation for discritized variables.  First for time.  We can say that the time at the ith point we are performing the calculation at can be written as: $$t \\longrightarrow t_i = t_{initial} + i\\Delta t,$$ for i = 0, 1, ..., n.  From  here we can also define discretized forms of our position and velocity equations using the same notation: $$y(t) \\longrightarrow y(t_i) = y_i$$ $$v(t) \\longrightarrow v(t_i) = v_i$$\n",
+    "From here we need to introduce a notation for discritized variables.  First for time.  We can say that the time at the ith point we are performing the calculation at can be written as: $t \\longrightarrow t_i = t_{initial} + i\\Delta t,$ for i = 0, 1, ..., n.  From  here we can also define discretized forms of our position and velocity equations using the same notation: $y(t) \\longrightarrow y(t_i) = y_i$ $v(t) \\longrightarrow v(t_i) = v_i$\n",
     "\n",
     "We also need to introduce the following notation for a position or velocity that is one time step ahead of or behind the ith point:\n",
-    "$$y_{i\\pm1} = y(t_i \\pm \\Delta t)$$ $$v_{i\\pm1} = v(t_i \\pm \\Delta t)$$\n",
+    "$y_{i\\pm1} = y(t_i \\pm \\Delta t)$ $v_{i\\pm1} = v(t_i \\pm \\Delta t)$\n",
     "\n",
-    "Now, combining all of this together, we can write an equation for the position of the object in discretized form: $$y_{i+1} = y_i + v_i\\Delta t.$$. So, given an equation for the velocity of a system, the time step, and the initial conditions (starting position and velocity) we can solve for the position at any time step:\n",
-    "$$y_1 = y_0 + v_0\\Delta t$$\n",
-    "$$y_2 = y_1 + v_1\\Delta t$$\n",
-    "$$y_3 = y_2 + v_2\\Delta t$$\n",
-    "$$...$$\n",
+    "Now, combining all of this together, we can write an equation for the position of the object in discretized form: $y_{i+1} = y_i + v_i\\Delta t.$. So, given an equation for the velocity of a system, the time step, and the initial conditions (starting position and velocity) we can solve for the position at any time step:\n",
+    "$y_1 = y_0 + v_0\\Delta t,$\n",
+    "$y_2 = y_1 + v_1\\Delta t,$\n",
+    "$y_3 = y_2 + v_2\\Delta t,$\n",
+    "$...$$\n",
     "\n",
     "Note that the smaller the time step is the more accurate the solution to the differential equation will be, but this will also increase computational time.  Solving differential equations numerically can involve finding a balance between accuracy and run time."
    ]
@@ -95,7 +95,7 @@
     "Euler's method is one of the simplest methods for solving second order differential equations, but it also has the largest error, with the error being proportional to the step size.  This does mean, however, that the error of the method can be decreased by decreasing the time step.\n",
     "\n",
     "Using acceleration as an example of a second order differential eqaution (with velocity being the first order differential equation and position being the original function), we can represent Euler's method in eqution form as:\n",
-    "$$v_{i+1} = v_i + a_i\\Delta t,$$ and $$y_{i+1} = y_i + v_i\\Delta t.$$ \n",
+    "$v_{i+1} = v_i + a_i\\Delta t,$ and $y_{i+1} = y_i + v_i\\Delta t.$\n",
     "\n",
     "We can also computationally represent Euler's method with a skeleton code as:\n",
     "\n",
@@ -173,7 +173,7 @@
     "The Euler-Cromer method is a slight variation on Euler's method.  The difference is that the position is calculated using the velocity at the current time step instead of the previous time step.  The error on the Euler-Cromer method is proportional to $\\Delta t$ the same as for the Euler's method, but there is an important difference between the two methods.  Euler's method is known as an _energy increasing method_.  This means that, in general, the further a calculated point is from the starting point the less accurate it is.  However, the Euler-Cromer method is known as a _stable method_, meaning that the long range points will be as accurate as the close range ones.  This makes Euler-Cromer a better choice than Euler's method when solving a differential equation over a wide range.\n",
     "\n",
     "We can represent Euler-Cromer method in equation form as:\n",
-    "$$v_{i+1} = v_i + a_i\\Delta t,$$ and $$y_{i+1} = y_i + v_{i+1}\\Delta t.$$ \n",
+    "$v_{i+1} = v_i + a_i\\Delta t,$ and $$y_{i+1} = y_i + v_{i+1}\\Delta t.$ \n",
     "\n",
     "We can also computationally represent Euler's method with a skeleton code as:\n",
     "\n",
@@ -229,7 +229,7 @@
     "\n",
     "The final numerical differential equation solver we will look at in detail is called the Velocity-Verlet method.  It is a bit more complicated than the previous two methods, but it does have some major advantages.  The error for the Velocity-Verlet method is proportional to $\\Delta t^3$, compared to the previous two method which had an error proportional to $\\Delta t$ ($\\Delta t^3 < \\Delta t$ for $\\Delta t < 1$).  Velocity-Verlet is a stable method like Euler-Cromer, meaning that it will conserve the energy of the system, even when calculating over a longer time range.\n",
     "\n",
-    "We can represent the Velocity-Verlet method in equation form as: $$x_{i+1} = x_i + v_i\\Delta t + \\frac{1}{2}a_i\\Delta t^2$$ $$v_{i+1} = v_i + \\frac{1}{2}\\Delta t (a_{i+1} + a_i),$$\n",
+    "We can represent the Velocity-Verlet method in equation form as: $x_{i+1} = x_i + v_i\\Delta t + \\frac{1}{2}a_i\\Delta t^2$ and $v_{i+1} = v_i + \\frac{1}{2}\\Delta t (a_{i+1} + a_i),$\n",
     "\n",
     "and in computational form as:\n",
     "```python\n",
@@ -312,31 +312,31 @@
     "\n",
     "We cam define the following equations for the forces acting on the object.  For the force due to Earth's gravity:\n",
     "\n",
-    "$$\\vec{F}_g = m\\vec{g},$$\n",
+    "$\\vec{F}_g = m\\vec{g},$\n",
     "\n",
     "where\n",
     "\n",
-    "$$\\vec{g} = \\langle 0,-9.81\\rangle \\frac{m}{s^2}$$.\n",
+    "$\\vec{g} = \\langle 0,-9.81\\rangle \\frac{m}{s^2}$.\n",
     "\n",
     "For linear air resistance, we can define the force as being proportional to the object's velocity:\n",
     "\n",
-    "$$\\vec{F}_{drag} = -b\\vec{v},$$\n",
+    "$\\vec{F}_{drag} = -b\\vec{v},$\n",
     "\n",
     "where b is a constant that depends on the objects shape, but is typically much less than 1.\n",
     "\n",
     "Therefore, we can define the net force on the object in vector form as:\n",
     "\n",
-    "$$\\vec{F}_{net} = \\vec{F}_g + \\vec{F}_{drag} = m\\vec{g} - b\\vec{v}.$$\n",
+    "$\\vec{F}_{net} = \\vec{F}_g + \\vec{F}_{drag} = m\\vec{g} - b\\vec{v}.$\n",
     "\n",
     "Since we are only interested in modelling the height of the object, we can restrict the net force equation to just the y-direction:\n",
     "\n",
-    "$$F_{net,y} = mg-bv_y,$$\n",
+    "$F_{net,y} = mg-bv_y,$\n",
     "\n",
     "where g as been redefined to be g = -9.81$\\frac{m}{s^2}$.\n",
     "\n",
     "Using Newton's second law (F=ma), we can define the acceleration of the object as:\n",
     "\n",
-    "$$a_y = \\frac{F_{net,y}}{m} = g-\\frac{b}{m}v.$$\n",
+    "$a_y = \\frac{F_{net,y}}{m} = g-\\frac{b}{m}v.$\n",
     "\n",
     "We can translate the above equation for accleration into Python syntax that we can plug into our numerical differential equation solvers.  \n",
     "\n",
@@ -550,15 +550,15 @@
     "\n",
     "Now let's analyze how well each of our numerical differential equation solvers work by comparing their results to the exact, analytical position for our system.  For an object in freefall with linear drag we can model its height as a function of time by\n",
     "\n",
-    "$$y(t) = v_{ter}t + (v_0-v_{ter})\\tau (1-e^{-t/\\tau})+y_0,$$\n",
+    "$y(t) = v_{ter}t + (v_0-v_{ter})\\tau (1-e^{-t/\\tau})+y_0,$\n",
     "\n",
     "where v$_0$ and and y$_0$ are the initial velocity and position, v$_{ter}$ is the terminal velocity of the object defined as \n",
     "\n",
-    "$$v_{ter} = \\frac{mg}{b},$$\n",
+    "$v_{ter} = \\frac{mg}{b},$\n",
     "\n",
     "and $\\tau$ is a quantity known as the characteristic time and is defined as\n",
     "\n",
-    "$$\\tau = \\frac{v_{ter}}{g} = \\frac{m}{b}$$\n",
+    "$\\tau = \\frac{v_{ter}}{g} = \\frac{m}{b}$\n",
     "\n",
     "Using the above equations, let's create an array that holds the exact height of our object for every time of interest."
    ]
