--- a/Notebook2.ipynb
+++ b/Notebook2.ipynb
@@ -69,7 +69,7 @@
     "Each neuron is a mathematical function involving a column from a weight matrix, a scalar from a bias vector, and an activation function.  We can represent the mathematical form of the i-th neuron as:\n",
     "\n",
     "\n",
-    "$$\\hat{y}_i = f(\\sum_{j=1}^M w_{ij}x_j + b_i),$$\n",
+    "$\\hat{y}_i = f(\\sum_{j=1}^M w_{ij}x_j + b_i),$\n",
     "\n",
     "\n",
     "where x is the input to the neural network, w is the weight matrix which scales the input of the neuron, b is the bias vector that makes sure the output of the neuron is non-zero, and f is known as the activation function, which adds nonlinearity to the neuron."
@@ -89,20 +89,20 @@
     "\n",
     "\n",
     "\n",
-    "$$f(x) = \\frac{1}{1 + e^{-x}}$$\n",
+    "$f(x) = \\frac{1}{1 + e^{-x}}$\n",
     "\n",
     "\n",
     "**Hyperbolic Tangent**\n",
     "\n",
     "\n",
     "\n",
-    "$$f(x) = tanh(x) = \\frac{e^{2x} - 1}{e^{2x} + 1}$$\n",
+    "$f(x) = tanh(x) = \\frac{e^{2x} - 1}{e^{2x} + 1}$\n",
     "\n",
-    "Relu (Rectified Linear Unit)\n",
+    "**Relu (Rectified Linear Unit)**\n",
     "\n",
     "\n",
     "\n",
-    "$$f(x) = max(0, x)$$\n"
+    "$f(x) = max(0, x)$\n"
    ]
   },
   {
@@ -127,14 +127,14 @@
     "For each neuron, i, in the first hidden layer of a neural network, we can represent its mathematical form as:\n",
     "\n",
     "\n",
-    "$$\\hat{y}_i^1 = f^1(\\sum_{j=1}^M w_{ij}^1x_j + b_i^1).$$\n",
+    "$\\hat{y}_i^1 = f^1(\\sum_{j=1}^M w_{ij}^1x_j + b_i^1).$\n",
     "\n",
     "\n",
     "\n",
     "We can also write out the mathematical form for the entire first hidden layer as:\n",
     "\n",
     "\n",
-    "$$\\hat{y}_1 = f^1(W_1\\textbf{x} + \\textbf{b}_1)$$"
+    "$\\hat{y}_1 = f^1(W_1\\textbf{x} + \\textbf{b}_1)$"
    ]
   },
   {
@@ -147,20 +147,20 @@
     "\n",
     "Similarly for the second hidden layer, we can represent the mathematical form of each neuron as:\n",
     "\n",
-    "$$y_i^2 = f^2(\\sum_{j=1}^N w_{ij}^2y_j^1 + b_i^2).$$\n",
+    "$y_i^2 = f^2(\\sum_{j=1}^N w_{ij}^2y_j^1 + b_i^2).$\n",
     "\n",
     "Note here that the weights matriz is no longer multiplied by the inputs to the neural network (x), but rather to the output of the first hidden layer.  This is because the input to the first hidden layer is the input ot the neural network but the input to the second hidden layer is the output of the first hidden layer.  Therefore we can expand the above equation to be a bit more clear:\n",
     "\n",
-    "$$y_i^2 = f^2(\\sum_{j=1}^N w_{ij}^2f^1(\\sum_{k=1}^M w_{kj}^1x_k + b_j^1) + b_i^2).$$\n",
+    "$y_i^2 = f^2(\\sum_{j=1}^N w_{ij}^2f^1(\\sum_{k=1}^M w_{kj}^1x_k + b_j^1) + b_i^2).$\n",
     "\n",
     "\n",
     "We can also write a mathematical form for the entire second hidden layer as:\n",
     "\n",
-    "$$\\hat{y}_2 = f^2(W_2\\hat{y}_1 + \\textbf{b}_2),$$\n",
+    "$\\hat{y}_2 = f^2(W_2\\hat{y}_1 + \\textbf{b}_2),$\n",
     "\n",
     "or more explicity as\n",
     "\n",
-    "$$\\hat{y}_2 = f^2(W_2f^1(W_1\\textbf(x) + \\textbf{b}_1) + \\textbf{b}_2).$$"
+    "$\\hat{y}_2 = f^2(W_2f^1(W_1\\textbf(x) + \\textbf{b}_1) + \\textbf{b}_2).$"
    ]
   },
   {
@@ -174,28 +174,28 @@
     "Finally, we can use the pattern we have developed to write down the equation for the mathematical output for a neuron on the l-th hidden layer of the neural network.  For the i-th neuron on the l-th layer we can describe it mathematically as:\n",
     "\n",
     "\n",
-    "$$y_i^l = f^l(\\sum_{j=1}^{N_l} w_{ij}^ly_j^{l-1} + b_i^l),$$\n",
+    "$y_i^l = f^l(\\sum_{j=1}^{N_l} w_{ij}^ly_j^{l-1} + b_i^l),$\n",
     "\n",
     "and more explicitly as\n",
     "\n",
-    "$$y_i^l = f^l(\\sum_{j=1}^{N_l} w_{ij}^lf^{l-1}(\\sum_{k=1}^{N_{l-1}} w_{kj}^{l-2}y_k^{l-1} + b_j^{l-1}) + b_i^l),$$\n",
+    "$y_i^l = f^l(\\sum_{j=1}^{N_l} w_{ij}^lf^{l-1}(\\sum_{k=1}^{N_{l-1}} w_{kj}^{l-2}y_k^{l-1} + b_j^{l-1}) + b_i^l),$\n",
     "\n",
     "and finally all the way expanded as\n",
     "\n",
-    "$$y_i^l = f^l(\\sum_{j=1}^{N_l} w_{ij}^l f^{l-1}(\\sum_{k=1}^{N_{l-1}} w_{jk}^{l-1}( \\cdot \\cdot \\cdot f^1(\\sum_{n=1}^M w_{mn}^1x_n + b_m^1) \\cdot \\cdot \\cdot ) + b_k^{l-1}) + b_j^l).$$\n",
+    "$y_i^l = f^l(\\sum_{j=1}^{N_l} w_{ij}^l f^{l-1}(\\sum_{k=1}^{N_{l-1}} w_{jk}^{l-1}( \\cdot \\cdot \\cdot f^1(\\sum_{n=1}^M w_{mn}^1x_n + b_m^1) \\cdot \\cdot \\cdot ) + b_k^{l-1}) + b_j^l).$\n",
     "\n",
     "\n",
     "We can also write a mathematical expression for the output of the entire l-th layer as:\n",
     "\n",
-    "$$\\hat{y}_l = f^l (W_l \\hat{y}_{l-1} + \\textbf{b}_l),$$\n",
+    "$\\hat{y}_l = f^l (W_l \\hat{y}_{l-1} + \\textbf{b}_l),$\n",
     "\n",
     "which can be expanded to\n",
     "\n",
-    "$$\\hat{y}_l = f^l(W_lf^{l-1}(W_{l-1}\\hat{y}_{l-2} + \\textbf{b}_{l-1}) + \\textbf{b}_l),$$\n",
+    "$\\hat{y}_l = f^l(W_lf^{l-1}(W_{l-1}\\hat{y}_{l-2} + \\textbf{b}_{l-1}) + \\textbf{b}_l),$\n",
     "\n",
     "and finally to\n",
     "\n",
-    "$$\\hat{y}_l = f^l(W_lf^{l-1}(W_{l-1}(\\cdot \\cdot \\cdot f^1(W_1\\textbf{x} + \\textbf{b}_1) \\cdot \\cdot \\cdot) + \\textbf{b}_{l-1}) + \\textbf{b}_l).$$\n",
+    "$\\hat{y}_l = f^l(W_lf^{l-1}(W_{l-1}(\\cdot \\cdot \\cdot f^1(W_1\\textbf{x} + \\textbf{b}_1) \\cdot \\cdot \\cdot) + \\textbf{b}_{l-1}) + \\textbf{b}_l).$\n",
     "\n",
     "\n",
     "Its a complicated expression and can grow to be very large but it is a set equation that describes the output of a neural network with l-1 hidden layers and an output layer. So it is also possible to rephrase the defiition of a neural network to be an analytical function that maps a set of inputs to a set of outputs using a set of optimized parameters."
@@ -211,13 +211,13 @@
     "\n",
     "A loss function is used to determine how much the output from a neural network differs from the true/expected result.  There is not a set loss function that is used with neural networks, but two common loss functions are the mean-squared error loss function and the mean absolute error function.  The mean-squared error loss function (MSE) can be defined as:\n",
     "\n",
-    "$$J_{MSE}(W) = \\frac{1}{N}\\sum_{i=1}^N (y_i - \\hat{y}_i)^2,$$\n",
+    "$J_{MSE}(W) = \\frac{1}{N}\\sum_{i=1}^N (y_i - \\hat{y}_i)^2,$\n",
     "\n",
     "where y is the true data set, $\\hat{y}$ is the neural network prediction, N is the number of data points in the set, and W are the weights of the neural network.  The loss function depends on the weights of the neural network because changing the weights of the neural network changes its output.  \n",
     "\n",
     "The mean-absolute error loss function (MAE) has a similar form:\n",
     "\n",
-    "$$J_{MAE}(W) = \\frac{1}{N}\\sum_{i=1}^N |y_i - \\hat{y}_i|..$$\n"
+    "$J_{MAE}(W) = \\frac{1}{N}\\sum_{i=1}^N |y_i - \\hat{y}_i|.$\n"
    ]
   },
   {
@@ -256,7 +256,7 @@
     "\n",
     "After the forward pass comes backpropagation, where the error from the loss function is backpropagated through the layers of the neural networks and its weights are adjusted layer by layer so that the next forward pass will result in a reduced loss value.  A simple way to optimize the weights of a neural network during backpropagation is through an optimization technique known as gradient descent.  The weights of the neural network are simply adjusted by the derivative of the loss function with respect to the weights, scaled by a hyperparameter known as the learning rate:\n",
     "\n",
-    "$$W = W - r_{l}\\frac{\\partial J(W}{\\partial W}.$$\n",
+    "$W = W - r_{l}\\frac{\\partial J(W}{\\partial W}.$\n",
     "\n",
     "The learning rate (r$_l$) is a number typically much less than 1 and it is also a hyperparameter, so its value must be set before the neural network is run.\n",
     "\n",
